[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapsec"
version = "0.1.0"
description = "Modular mapping and security reconnaissance framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Luiz" }
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
mapsec = "mapsec.cli:app"
mapsec-gui = "mapsec.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["mapsec"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
